--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/js/app.js"></script>
+    <script src="app/js/controllers/home.js"></script>
   </head>
   <body>
     <h1>NoiseScore</h1>
