--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html ng-app="noiseScoreApp">
   <head>
+    <link rel="stylesheet" type="text/css" href="app/css/home.css">
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/js/app.js"></script>
     <script src="app/js/controllers/home.js"></script>
+    <script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?key=[KEYGOESHERE]&libraries=visualization&sensor=true_or_false">
+    </script>
   </head>
   <body>
     <h1>NoiseScore</h1>
