--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="app/js/app.js"></script>
     <script src="app/js/controllers/home.js"></script>
     <script type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?key=KEY&libraries=visualization&sensor=true_or_false">
+    src="https://maps.googleapis.com/maps/api/js?key=[KEY]&libraries=visualization&sensor=true_or_false">
     </script>
   </head>
   <body>
