moving sortLayerArrays into a service

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/js/app.js"></script>
     <script src="app/js/controllers/home.js"></script>
-    <script type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false">
-    </script>
+    <script src="app/js/services.js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false"></script>
   </head>
   <body>
     <h1>NoiseScore</h1>
