--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="noiseScoreApp">
   <head>
     <link rel="stylesheet" type="text/css" href="app/css/home.css">
+    <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/js/app.js"></script>
@@ -10,7 +11,9 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false"></script>
   </head>
   <body>
-    <h1>NoiseScore</h1>
-    <div class="container" ui-view></div>
+    <div class="container-fluid">
+      <h1>Something Not Called NoiseScore</h1>
+      <div ui-view></div>
+    </div>
   </body>
 </html>
