--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container-fluid">
       <h1>Something Not Called NoiseScore</h1>
-      <hr>
+      <div class="divider"></div>
       <div ui-view></div>
     </div>
   </body>
