--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <script src="app/js/controllers/home.js"></script>
     <script src="app/js/services.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false"></script>
-    <script>
-      $(function)() {
-        $(".clicked").click(function() {
-          $(this).addClass("unclicked");
-        });
-      });
-    </script>
+    <!-- // <script>
+    //   $(function) {
+    //     $(".clicked").click(function() {
+    //       $(this).addClass("unclicked");
+    //     });
+    //   };
+    // </script> -->
   </head>
   <body>
     <div class="container-fluid">
