--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/js/app.js"></script>
     <script src="app/js/controllers/home.js"></script>
+    <script src="app/js/controllers/map.js"></script>
     <script src="app/js/services.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false"></script>
   </head>
