--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=Play' rel='stylesheet' type='text/css'>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
     <script src="app/js/app.js"></script>
     <script src="app/js/controllers/home.js"></script>
     <script src="app/js/controllers/map.js"></script>
