--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container-fluid">
-      <h1>Something Not Called NoiseScore</h1>
+      <h1>Shut Up, Seattle</h1>
       <div class="divider"></div>
       <div ui-view></div>
     </div>
