added bootstrap-ui angular, unsuccessfully added tooltip, needs more work

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/d3/d3.js"></script>
+    <script src="app/js/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="app/js/app.js"></script>
     <script src="app/js/controllers/home.js"></script>
     <script src="app/js/controllers/map.js"></script>
