--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="app/js/app.js"></script>
     <script src="app/js/controllers/home.js"></script>
     <script src="app/js/controllers/map.js"></script>
+    <script src="app/js/controllers/map2.js"></script>
     <script src="app/js/services.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false"></script>
   </head>
