adding ilnk for API

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
         <div class="navbar-text navbar-right">
           <a ui-sref="about" class="navbar-link">About</a>
+          <a href="http://54.191.247.160" class="navbar-link">API</a>
           <a ui-sref="contact" class="navbar-link">Contact</a>
         </div>
       </div>
