--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="noiseScoreApp">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF8">
+    <link href="./app/img/favicon.ico" rel="icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="app/css/home.css">
