--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="navbar-text navbar-right">
           <a ui-sref="about" class="navbar-link">About</a>
-          <a href="http://api.shutupseattle.com" class="navbar-link">API</a>
+          <a ui-sref="api" class="navbar-link">API</a>
           <a ui-sref="contact" class="navbar-link">Contact</a>
         </div>
       </div>
