fixing hashes in URLs

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="app/js/controllers/map.js"></script>
     <script src="app/js/services.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false"></script>
+    <base href="/">
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
